fix: rename cpu/cores to vcpus Signed-off-by: sagarwal-ibm <sagarwal@ibm.com>
