# ai-services/docs/swagger.json
@@ -864,7 +864,7 @@
                         "BearerAuth": []
                     }
                 ],
-                "description": "Retrieves system resource information including CPU, memory, and accelerator availability",
+                "description": "Retrieves system resource information including vCPU, memory, and accelerator availability",
                 "produces": [
                     "application/json"
                 ],
@@ -1243,19 +1243,6 @@
                 }
             }
         },
-        "github_com_project-ai-services_ai-services_internal_pkg_catalog_types.ApplicationCPUInfo": {
-            "type": "object",
-            "properties": {
-                "total_cores": {
-                    "description": "Total allocated CPU cores",
-                    "type": "number"
-                },
-                "used_cores": {
-                    "description": "Actually used CPU cores",
-                    "type": "number"
-                }
-            }
-        },
         "github_com_project-ai-services_ai-services_internal_pkg_catalog_types.ApplicationListResponse": {
             "type": "object",
             "properties": {
@@ -1318,11 +1305,11 @@
                         }
                     }
                 },
-                "cpu": {
-                    "$ref": "#/definitions/github_com_project-ai-services_ai-services_internal_pkg_catalog_types.ApplicationCPUInfo"
-                },
                 "memory": {
                     "$ref": "#/definitions/github_com_project-ai-services_ai-services_internal_pkg_catalog_types.ApplicationMemInfo"
+                },
+                "vcpu": {
+                    "$ref": "#/definitions/github_com_project-ai-services_ai-services_internal_pkg_catalog_types.ApplicationVCPUInfo"
                 }
             }
         },
@@ -1365,6 +1352,19 @@
                 },
                 "version": {
                     "type": "string"
+                }
+            }
+        },
+        "github_com_project-ai-services_ai-services_internal_pkg_catalog_types.ApplicationVCPUInfo": {
+            "type": "object",
+            "properties": {
+                "total": {
+                    "description": "Total allocated vCPUs",
+                    "type": "number"
+                },
+                "used": {
+                    "description": "Actually used vCPUs",
+                    "type": "number"
                 }
             }
         },
@@ -1645,16 +1645,16 @@
                         "type": "integer"
                     }
                 },
-                "cpu": {
-                    "description": "CPU cores",
-                    "type": "integer"
-                },
                 "memory": {
                     "description": "Memory in bytes",
                     "type": "integer"
                 },
                 "storage": {
                     "description": "Storage in bytes",
+                    "type": "integer"
+                },
+                "vcpu": {
+                    "description": "vCPUs",
                     "type": "integer"
                 }
             }
@@ -1795,17 +1795,6 @@
                 }
             }
         },
-        "github_com_project-ai-services_ai-services_internal_pkg_models.CPUInfo": {
-            "type": "object",
-            "properties": {
-                "available_cores": {
-                    "type": "number"
-                },
-                "total_cores": {
-                    "type": "integer"
-                }
-            }
-        },
         "github_com_project-ai-services_ai-services_internal_pkg_models.MemoryInfo": {
             "type": "object",
             "properties": {
@@ -1813,6 +1802,17 @@
                     "type": "integer"
                 },
                 "total_bytes": {
+                    "type": "integer"
+                }
+            }
+        },
+        "github_com_project-ai-services_ai-services_internal_pkg_models.VCPUInfo": {
+            "type": "object",
+            "properties": {
+                "available": {
+                    "type": "number"
+                },
+                "total": {
                     "type": "integer"
                 }
             }
@@ -1834,11 +1834,11 @@
                         "$ref": "#/definitions/github_com_project-ai-services_ai-services_internal_pkg_models.AcceleratorInfo"
                     }
                 },
-                "cpu": {
-                    "$ref": "#/definitions/github_com_project-ai-services_ai-services_internal_pkg_models.CPUInfo"
-                },
                 "memory": {
                     "$ref": "#/definitions/github_com_project-ai-services_ai-services_internal_pkg_models.MemoryInfo"
+                },
+                "vcpu": {
+                    "$ref": "#/definitions/github_com_project-ai-services_ai-services_internal_pkg_models.VCPUInfo"
                 }
             }
         },
